--- a/IPMS_KLK/Views/MainMenuOptions/RubberReception.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/RubberReception.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="IPMS_KLK.Views.MainMenuOptions.RubberReception">
+             x:Class="IPMS_KLK.Views.MainMenuOptions.RubberReception"
+             xmlns:lottie="clr-namespace:Lottie.Forms;assembly=Lottie.Forms">
 
 
     <ContentPage.Background>
@@ -35,32 +36,31 @@
     </ContentPage.Resources>
 
     <ContentPage.Content>
-        <StackLayout Margin="0,40,0,0">
-
-            <Frame BackgroundColor="Transparent" Margin="0,5,0,0">
+        <StackLayout Margin="0,40,0,0">            
                 <Grid>
-                    <Image Source="ui3.png" Aspect="AspectFit" 
-                           HorizontalOptions="EndAndExpand" VerticalOptions="EndAndExpand"
-                           HeightRequest="150"
-                           Margin="0,10,0,0"/>
+                    <lottie:AnimationView Animation="Resources.bluelaptopworking.json"
+                         AnimationSource="EmbeddedResource"
+                         RepeatMode="Infinite"
+                         AutoPlay="True"
+                         HeightRequest="200"
+                         VerticalOptions="EndAndExpand" 
+                         Margin="175,0,20,0"/>
                     <StackLayout>
-                        <Label Text="Rubber Reception" 
+                        <Label Text="Rubber" 
                                FontFamily="passion" 
                                HorizontalOptions="StartAndExpand" 
                                FontSize="40" 
                                TextColor="Black" Margin="20,10,0,0"
-                               VerticalOptions="Start"/>                        
-                    </StackLayout>
-                    
+                               VerticalOptions="Start"/>
+                        <Label Text="Reception" 
+                               FontFamily="passion" 
+                               HorizontalOptions="StartAndExpand" 
+                               FontSize="40" 
+                               TextColor="Black" Margin="20,0,0,0"
+                               VerticalOptions="Start"/>
+                </StackLayout>                    
                 </Grid>
-                
-            </Frame>
             
-                        
-
-
-                    
-
             <StackLayout Padding="5,0,5,0" Margin="0,0,0,0">
 
                 <StackLayout VerticalOptions="FillAndExpand" Margin="20,10,20,0">
