--- a/IPMS_KLK/Views/LoginPage.xaml
+++ b/IPMS_KLK/Views/LoginPage.xaml
@@ -33,7 +33,7 @@
         
         <Grid VerticalOptions="EndAndExpand">          
             <StackLayout >
-                <lottie:AnimationView Animation="Resources.trusted-sites.json"
+                <lottie:AnimationView Animation="Resources.login-anim.json"
                          AnimationSource="EmbeddedResource"
                          RepeatMode="Infinite"
                          AutoPlay="True"
